--- a/package.json
+++ b/package.json
@@ -10,15 +10,13 @@
   "license": "ISC",
   "devDependencies": {
     "browserify": "^9.0.3",
-    "browserify-shim": "^3.8.3",
     "grunt": "^0.4.5",
-    "grunt-browserify": "^3.5.0",
+    "grunt-browserify": "^3.7.0",
     "grunt-bumpx": "^0.2.1",
     "grunt-contrib-clean": "^0.6.0",
     "grunt-contrib-compress": "^0.13.0",
     "grunt-contrib-copy": "^0.8.0",
-    "grunt-contrib-watch": "^0.6.1",
-    "remapify": "^1.4.4"
+    "grunt-contrib-watch": "^0.6.1"
   },
   "dependencies": {
     "URIjs": "^1.14.2",
@@ -34,11 +32,5 @@
       "browserify-shim"
     ]
   },
-  "browserify-shim": {
-    "libs/arrive.min.js": {
-      "depends": [
-        "jquery:jQuery"
-      ]
-    }
-  }
+  "browserify-shim": "./config/shim.js"
 }
