--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "eventemitter2": "^0.4.14",
     "inherits": "^2.0.1",
     "jquery": "^2.1.3",
+    "jquery-screen-events": "^0.1.3",
     "jquery.lifecycle": "^0.1.1",
     "knockout": "^3.3.0",
     "q": "^1.2.0"
