Add settings api with env toggle

--- a/src/chrome/manifest.json
+++ b/src/chrome/manifest.json
@@ -11,6 +11,10 @@
   "optional_permissions": [
     "<all_urls>"
   ],
+  "options_ui": {
+    "page": "options.html",
+    "chrome_style": true
+  },
   "content_scripts": [
     {
       "matches": [
